Fixed outline issue with overlapping

--- a/src/sample/roundedbuttonstyle.css
+++ b/src/sample/roundedbuttonstyle.css
@@ -104,6 +104,7 @@
 .outline.label .text {
 -fx-stroke: #000000;
 -fx-stroke-width: 1.5px;
+-fx-stroke-type: outside;
 }
 
 #shopping_button {
@@ -311,7 +312,12 @@
 .information_textfield {
 -fx-background-color: #E4E4E4;
 -fx-border-width: 1px;
--fx-border-color: #000000;
+-fx-border-color: #737373;
 -fx-font-family: 'Roboto';
 -fx-font-size: 24px;
+}
+
+.information_textfield:hover, .information_textfield:focused {
+-fx-background-color: #FFFFFF;
+-fx-border-color: #000000;
 }
